feat: 1) реализация FinishedMatchesController и matches.jsp без валидации и пагинации